# simple-weather-mcp

./: LICENSE  README.md  main.py  pyproject.toml
