[project]
name = "simple-weather-mcp"
version = "0.1.0"
description = "Weather MCP Server"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.28.1",
    "mcp[cli]>=1.6.0",
    "requests>=2.32.3",
]
authors = [
    { name = "Mark Pazolli", email = "52765023+markmehere@users.noreply.github.com" }
]
license = { file = "LICENSE" }
keywords = ["weather", "mcp", "forecast", "geocoding", "api"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.scripts]
simple-weather-mcp = "main:main"
